src/core/generated-parser/myGrammarParser.js
// Generated from myGrammar.g4 by ANTLR 4.7.1
// jshint ignore: start
/* eslint-disable */
var antlr4 = require('antlr4/index');
var myGrammarListener = require('./myGrammarListener').myGrammarListener;
var grammarFileName = "myGrammar.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'\"'", "'||'", "'&&'", "'!'", "'...'", "'!...'", 
                     "'.'", "'='", "'>'", "'<'", "','", "'''", "'must '", 
                     "'of '", "'and '", "'or '", "'have '", "'with '", null, 
                     null, null, "'('", "')'", "'name '", "'annotation '", 
                     "'extension '", "'Superclass'", "'implementation '", 
                     "'Interface '", "'function '", "'abstract function '", 
                     "'constructor '", "'parameter '", "'type '", "'specifier '", 
                     "'visibility '", "'return value '", "'declaration statement '", 
                     "'expression statement '", "'initial value '", null, 
                     "'interface '" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, "SPACE", "Alphabet", "NL", "LPAREN", "RPAREN", 
                      "NAME", "ANNOTATION", "EXTENSION", "SUPERCLASS", "IMPLEMENTATION", 
                      "INTERFACE", "FUNCTION", "AbstractFunctions", "CONSTRUCTOR", 
                      "PARAMETER", "TYPES", "SPECIFIER", "VISIBILITY", "ReturnValue", 
                      "DeclarationStatement", "ExpressionStatement", "InitialValue", 
                      "CLASSES", "INTERFACES" ];

var ruleNames =  [ "inputSentence", "mustClause", "words", "word", "oldWords", 
                   "combinatorialWords", "symbols", "end", "emptyLine", 
                   "must", "of", "and", "or", "have", "withWord", "binary", 
                   "names", "nameOf", "nameCondition", "annotations", "annotationOf", 
                   "annotationCondition", "extensions", "extensionOf", "extensionCondition", 
                   "implementations", "implementationOf", "implementationCondition", 
                   "functions", "functionOf", "functionCondition", "functionExpression", 
                   "abstractFunctions", "abstractFunctionOf", "abstractFunctionCondition", 
                   "abstractFunctionExpression", "constructors", "constructorOf", 
                   "constructorCondition", "constructorExpression", "parameters", 
                   "parameterOf", "parameterCondition", "parameterExpression", 
                   "types", "typeOf", "typeCondition", "specifiers", "specifierOf", 
                   "specifierCondition", "visibilities", "visibilityOf", 
                   "visibilityCondition", "returnValues", "returnValueOf", 
                   "returnValueCondition", "declarationStatements", "declarationStatementOf", 
                   "declarationStatementCondition", "declarationStatementExpression", 
                   "expressionStatements", "expressionStatementOf", "expressionStatementCondition", 
                   "initialValues", "initialValueOf", "initialValueCondition", 
                   "classes", "classOf", "classCondition", "classExpression", 
                   "interfaces", "interfaceOf", "interfaceCondition", "interfaceExpression" ];

function myGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

myGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
myGrammarParser.prototype.constructor = myGrammarParser;

Object.defineProperty(myGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

myGrammarParser.EOF = antlr4.Token.EOF;
myGrammarParser.T__0 = 1;
myGrammarParser.T__1 = 2;
myGrammarParser.T__2 = 3;
myGrammarParser.T__3 = 4;
myGrammarParser.T__4 = 5;
myGrammarParser.T__5 = 6;
myGrammarParser.T__6 = 7;
myGrammarParser.T__7 = 8;
myGrammarParser.T__8 = 9;
myGrammarParser.T__9 = 10;
myGrammarParser.T__10 = 11;
myGrammarParser.T__11 = 12;
myGrammarParser.T__12 = 13;
myGrammarParser.T__13 = 14;
myGrammarParser.T__14 = 15;
myGrammarParser.T__15 = 16;
myGrammarParser.T__16 = 17;
myGrammarParser.T__17 = 18;
myGrammarParser.SPACE = 19;
myGrammarParser.Alphabet = 20;
myGrammarParser.NL = 21;
myGrammarParser.LPAREN = 22;
myGrammarParser.RPAREN = 23;
myGrammarParser.NAME = 24;
myGrammarParser.ANNOTATION = 25;
myGrammarParser.EXTENSION = 26;
myGrammarParser.SUPERCLASS = 27;
myGrammarParser.IMPLEMENTATION = 28;
myGrammarParser.INTERFACE = 29;
myGrammarParser.FUNCTION = 30;
myGrammarParser.AbstractFunctions = 31;
myGrammarParser.CONSTRUCTOR = 32;
myGrammarParser.PARAMETER = 33;
myGrammarParser.TYPES = 34;
myGrammarParser.SPECIFIER = 35;
myGrammarParser.VISIBILITY = 36;
myGrammarParser.ReturnValue = 37;
myGrammarParser.DeclarationStatement = 38;
myGrammarParser.ExpressionStatement = 39;
myGrammarParser.InitialValue = 40;
myGrammarParser.CLASSES = 41;
myGrammarParser.INTERFACES = 42;

myGrammarParser.RULE_inputSentence = 0;
myGrammarParser.RULE_mustClause = 1;
myGrammarParser.RULE_words = 2;
myGrammarParser.RULE_word = 3;
myGrammarParser.RULE_oldWords = 4;
myGrammarParser.RULE_combinatorialWords = 5;
myGrammarParser.RULE_symbols = 6;
myGrammarParser.RULE_end = 7;
myGrammarParser.RULE_emptyLine = 8;
myGrammarParser.RULE_must = 9;
myGrammarParser.RULE_of = 10;
myGrammarParser.RULE_and = 11;
myGrammarParser.RULE_or = 12;
myGrammarParser.RULE_have = 13;
myGrammarParser.RULE_withWord = 14;
myGrammarParser.RULE_binary = 15;
myGrammarParser.RULE_names = 16;
myGrammarParser.RULE_nameOf = 17;
myGrammarParser.RULE_nameCondition = 18;
myGrammarParser.RULE_annotations = 19;
myGrammarParser.RULE_annotationOf = 20;
myGrammarParser.RULE_annotationCondition = 21;
myGrammarParser.RULE_extensions = 22;
myGrammarParser.RULE_extensionOf = 23;
myGrammarParser.RULE_extensionCondition = 24;
myGrammarParser.RULE_implementations = 25;
myGrammarParser.RULE_implementationOf = 26;
myGrammarParser.RULE_implementationCondition = 27;
myGrammarParser.RULE_functions = 28;
myGrammarParser.RULE_functionOf = 29;
myGrammarParser.RULE_functionCondition = 30;
myGrammarParser.RULE_functionExpression = 31;
myGrammarParser.RULE_abstractFunctions = 32;
myGrammarParser.RULE_abstractFunctionOf = 33;
myGrammarParser.RULE_abstractFunctionCondition = 34;
myGrammarParser.RULE_abstractFunctionExpression = 35;
myGrammarParser.RULE_constructors = 36;
myGrammarParser.RULE_constructorOf = 37;
myGrammarParser.RULE_constructorCondition = 38;
myGrammarParser.RULE_constructorExpression = 39;
myGrammarParser.RULE_parameters = 40;
myGrammarParser.RULE_parameterOf = 41;
myGrammarParser.RULE_parameterCondition = 42;
myGrammarParser.RULE_parameterExpression = 43;
myGrammarParser.RULE_types = 44;
myGrammarParser.RULE_typeOf = 45;
myGrammarParser.RULE_typeCondition = 46;
myGrammarParser.RULE_specifiers = 47;
myGrammarParser.RULE_specifierOf = 48;
myGrammarParser.RULE_specifierCondition = 49;
myGrammarParser.RULE_visibilities = 50;
myGrammarParser.RULE_visibilityOf = 51;
myGrammarParser.RULE_visibilityCondition = 52;
myGrammarParser.RULE_returnValues = 53;
myGrammarParser.RULE_returnValueOf = 54;
myGrammarParser.RULE_returnValueCondition = 55;
myGrammarParser.RULE_declarationStatements = 56;
myGrammarParser.RULE_declarationStatementOf = 57;
myGrammarParser.RULE_declarationStatementCondition = 58;
myGrammarParser.RULE_declarationStatementExpression = 59;
myGrammarParser.RULE_expressionStatements = 60;
myGrammarParser.RULE_expressionStatementOf = 61;
myGrammarParser.RULE_expressionStatementCondition = 62;
myGrammarParser.RULE_initialValues = 63;
myGrammarParser.RULE_initialValueOf = 64;
myGrammarParser.RULE_initialValueCondition = 65;
myGrammarParser.RULE_classes = 66;
myGrammarParser.RULE_classOf = 67;
myGrammarParser.RULE_classCondition = 68;
myGrammarParser.RULE_classExpression = 69;
myGrammarParser.RULE_interfaces = 70;
myGrammarParser.RULE_interfaceOf = 71;
myGrammarParser.RULE_interfaceCondition = 72;
myGrammarParser.RULE_interfaceExpression = 73;

function InputSentenceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = myGrammarParser.RULE_inputSentence;
    return this;
}

InputSentenceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InputSentenceContext.prototype.constructor = InputSentenceContext;

InputSentenceContext.prototype.EOF = function() {
    return this.getToken(myGrammarParser.EOF, 0);
};

InputSentenceContext.prototype.mustClause = function() {
    return this.getTypedRuleContext(MustClauseContext,0);
};

InputSentenceContext.prototype.end = function() {
    return this.getTypedRuleContext(EndContext,0);
};

InputSentenceContext.prototype.NL = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(myGrammarParser.NL);
    } else {
        return this.getToken(myGrammarParser.NL, i);
    }
};


InputSentenceContext.prototype.emptyLine = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EmptyLineContext);
    } else {
        return this.getTypedRuleContext(EmptyLineContext,i);
    }
};

InputSentenceContext.prototype.enterRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.enterInputSentence(this);
	}
};

InputSentenceContext.prototype.exitRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.exitInputSentence(this);
	}
};




myGrammarParser.InputSentenceContext = InputSentenceContext;

myGrammarParser.prototype.inputSentence = function() {

    var localctx = new InputSentenceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, myGrammarParser.RULE_inputSentence);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 155;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case myGrammarParser.EOF:
        case myGrammarParser.T__6:
        case myGrammarParser.NL:
            this.state = 151;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                if(_alt===1) {
                    this.state = 148;
                    this.emptyLine(); 
                }
                this.state = 153;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
            }

            break;
        case myGrammarParser.FUNCTION:
        case myGrammarParser.AbstractFunctions:
        case myGrammarParser.CONSTRUCTOR:
        case myGrammarParser.PARAMETER:
        case myGrammarParser.DeclarationStatement:
        case myGrammarParser.CLASSES:
        case myGrammarParser.INTERFACES:
            this.state = 154;
            this.mustClause();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 158;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===myGrammarParser.T__6) {
            this.state = 157;
            this.end();
        }

        this.state = 163;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===myGrammarParser.NL) {
            this.state = 160;
            this.match(myGrammarParser.NL);
            this.state = 165;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 166;
        this.match(myGrammarParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MustClauseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = myGrammarParser.RULE_mustClause;
    return this;
}

MustClauseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MustClauseContext.prototype.constructor = MustClauseContext;

MustClauseContext.prototype.functions = function() {
    return this.getTypedRuleContext(FunctionsContext,0);
};

MustClauseContext.prototype.must = function() {
    return this.getTypedRuleContext(MustContext,0);
};

MustClauseContext.prototype.have = function() {
    return this.getTypedRuleContext(HaveContext,0);
};

MustClauseContext.prototype.functionExpression = function() {
    return this.getTypedRuleContext(FunctionExpressionContext,0);
};

MustClauseContext.prototype.abstractFunctions = function() {
    return this.getTypedRuleContext(AbstractFunctionsContext,0);
};

MustClauseContext.prototype.abstractFunctionExpression = function() {
    return this.getTypedRuleContext(AbstractFunctionExpressionContext,0);
};

MustClauseContext.prototype.constructors = function() {
    return this.getTypedRuleContext(ConstructorsContext,0);
};

MustClauseContext.prototype.constructorExpression = function() {
    return this.getTypedRuleContext(ConstructorExpressionContext,0);
};

MustClauseContext.prototype.classes = function() {
    return this.getTypedRuleContext(ClassesContext,0);
};

MustClauseContext.prototype.classExpression = function() {
    return this.getTypedRuleContext(ClassExpressionContext,0);
};

MustClauseContext.prototype.interfaces = function() {
    return this.getTypedRuleContext(InterfacesContext,0);
};

MustClauseContext.prototype.interfaceExpression = function() {
    return this.getTypedRuleContext(InterfaceExpressionContext,0);
};

MustClauseContext.prototype.parameters = function() {
    return this.getTypedRuleContext(ParametersContext,0);
};

MustClauseContext.prototype.parameterExpression = function() {
    return this.getTypedRuleContext(ParameterExpressionContext,0);
};

MustClauseContext.prototype.declarationStatements = function() {
    return this.getTypedRuleContext(DeclarationStatementsContext,0);
};

MustClauseContext.prototype.declarationStatementExpression = function() {
    return this.getTypedRuleContext(DeclarationStatementExpressionContext,0);
};

MustClauseContext.prototype.enterRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.enterMustClause(this);
	}
};

MustClauseContext.prototype.exitRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.exitMustClause(this);
	}
};




myGrammarParser.MustClauseContext = MustClauseContext;

myGrammarParser.prototype.mustClause = function() {

    var localctx = new MustClauseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, myGrammarParser.RULE_mustClause);
    try {
        this.state = 203;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case myGrammarParser.FUNCTION:
            this.enterOuterAlt(localctx, 1);
            this.state = 168;
            this.functions();
            this.state = 169;
            this.must();
            this.state = 170;
            this.have();
            this.state = 171;
            this.functionExpression(0);
            break;
        case myGrammarParser.AbstractFunctions:
            this.enterOuterAlt(localctx, 2);
            this.state = 173;
            this.abstractFunctions();
            this.state = 174;
            this.must();
            this.state = 175;
            this.have();
            this.state = 176;
            this.abstractFunctionExpression(0);
            break;
        case myGrammarParser.CONSTRUCTOR:
            this.enterOuterAlt(localctx, 3);
            this.state = 178;
            this.constructors();
            this.state = 179;
            this.must();
            this.state = 180;
            this.have();
            this.state = 181;
            this.constructorExpression(0);
            break;
        case myGrammarParser.CLASSES:
            this.enterOuterAlt(localctx, 4);
            this.state = 183;
            this.classes();
            this.state = 184;
            this.must();
            this.state = 185;
            this.have();
            this.state = 186;
            this.classExpression(0);
            break;
        case myGrammarParser.INTERFACES:
            this.enterOuterAlt(localctx, 5);
            this.state = 188;
            this.interfaces();
            this.state = 189;
            this.must();
            this.state = 190;
            this.have();
            this.state = 191;
            this.interfaceExpression(0);
            break;
        case myGrammarParser.PARAMETER:
            this.enterOuterAlt(localctx, 6);
            this.state = 193;
            this.parameters();
            this.state = 194;
            this.must();
            this.state = 195;
            this.have();
            this.state = 196;
            this.parameterExpression(0);
            break;
        case myGrammarParser.DeclarationStatement:
            this.enterOuterAlt(localctx, 7);
            this.state = 198;
            this.declarationStatements();
            this.state = 199;
            this.must();
            this.state = 200;
            this.have();
            this.state = 201;
            this.declarationStatementExpression(0);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = myGrammarParser.RULE_words;
    return this;
}

WordsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordsContext.prototype.constructor = WordsContext;

WordsContext.prototype.word = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(WordContext);
    } else {
        return this.getTypedRuleContext(WordContext,i);
    }
};

WordsContext.prototype.enterRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.enterWords(this);
	}
};

WordsContext.prototype.exitRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.exitWords(this);
	}
};




myGrammarParser.WordsContext = WordsContext;

myGrammarParser.prototype.words = function() {

    var localctx = new WordsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, myGrammarParser.RULE_words);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 205;
        this.match(myGrammarParser.T__0);
        this.state = 214;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 212;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 206;
                    this.word();
                    this.state = 207;
                    this.match(myGrammarParser.T__1);
                    break;

                case 2:
                    this.state = 209;
                    this.word();
                    this.state = 210;
                    this.match(myGrammarParser.T__2);
                    break;

                } 
            }
            this.state = 216;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

        this.state = 217;
        this.word();
        this.state = 218;
        this.match(myGrammarParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function WordContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = myGrammarParser.RULE_word;
    return this;
}

WordContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WordContext.prototype.constructor = WordContext;

WordContext.prototype.Alphabet = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(myGrammarParser.Alphabet);
    } else {
        return this.getToken(myGrammarParser.Alphabet, i);
    }
};


WordContext.prototype.enterRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.enterWord(this);
	}
};

WordContext.prototype.exitRule = function(listener) {
    if(listener instanceof myGrammarListener ) {
        listener.exitWord(this);
	}
};




myGrammarParser.WordContext = WordContext;

myGrammarParser.prototype.word = function() {

    var localctx = new WordContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, myGrammarParser.RULE_word);
    var _la = 0; // Token type
    try {
        this.state = 270;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 221; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 220;
                this.match(myGrammarParser.Alphabet);
                this.state = 223; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 225;
            this.match(myGrammarParser.T__3);
            this.state = 227; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 226;
                this.match(myGrammarParser.Alphabet);
                this.state = 229; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 231;
            this.match(myGrammarParser.T__4);
            this.state = 233; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 232;
                this.match(myGrammarParser.Alphabet);
                this.state = 235; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 237;
            this.match(myGrammarParser.T__5);
            this.state = 239; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 238;
                this.match(myGrammarParser.Alphabet);
                this.state = 241; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 244; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 243;
                this.match(myGrammarParser.Alphabet);
                this.state = 246; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            this.state = 248;
            this.match(myGrammarParser.T__4);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 249;
            this.match(myGrammarParser.T__3);
            this.state = 251; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 250;
                this.match(myGrammarParser.Alphabet);
                this.state = 253; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            this.state = 255;
            this.match(myGrammarParser.T__4);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 256;
            this.match(myGrammarParser.T__4);
            this.state = 258; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 257;
                this.match(myGrammarParser.Alphabet);
                this.state = 260; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            this.state = 262;
            this.match(myGrammarParser.T__4);
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 263;
            this.match(myGrammarParser.T__5);
            this.state = 265; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 264;
                this.match(myGrammarParser.Alphabet);
                this.state = 267; 
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while(_la===myGrammarParser.Alphabet);
            this.state = 269;
            this.match(myGrammarParser.T__4);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
